[tool.poetry]
name = "csplotter"
version = "0.1.0"
description = "Circos plot tool for CS(Conserved Sequences) between reference species and closely related species"
authors = ["moshi"]
license = "MIT"
homepage = "https://github.com/moshi4/CSplotter/"
repository = "https://github.com/moshi4/CSplotter/"
readme = "README.md"
keywords = [
    "bioinformatics",
    "genomics",
    "comparative-genomics",
    "circos",
    "visualization",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
include = ["tests"]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
CSplotter = "csplotter.csplotter:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
